# voice-biometric-api

./: =3.1.3  README.md  app.py  config.py  models.py  package.json  pyproject.toml  replit.nix  routes.py  test_file.txt  utils.py
.idx/: dev.nix
instance/: voice_biometric.db
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/css/: style.css
static/js/: script.js
templates/: index.html  index.html.new
