[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."] 
include = ["app", "config", "models", "routes", "utils"]


